--- a/wp-content/themes/stolar/dev/css/_variables.scss
+++ b/wp-content/themes/stolar/dev/css/_variables.scss
@@ -6,7 +6,11 @@ $l: 1200px;
 $aside-width: 305px;
 
 $main-blue: #1E88E5;
-$main-green: #48a770;
+$main-green: #56A176;
 $second-green: #72b842;
+$olympic: #84AC95;
+$main-gray: #E8E8E8;
+$main-gold: #DCC77B;
+
 
 $path-to-images: "../../images"
