--- a/wp-content/themes/stolar/dev/css/_t-style.scss
+++ b/wp-content/themes/stolar/dev/css/_t-style.scss
@@ -6,7 +6,7 @@ html, body {
   padding: 0;
   margin: 0;
   color: #777777;
-  background: #f3efe0;
+ /* background: #f3efe0;*/
 }
 
 a {
@@ -212,18 +212,19 @@ img {
   width: 92%;
   height: 100%;
   border-radius: 5px;
-  background: $main-green;
+  //background: $main-green;
+  background: #84AC95;
   visibility: hidden;
   opacity: 0;
   transition: all 0.25s ease-in-out;
   -moz-transition: all 0.25s ease-in-out;
   -webkit-transition: all 0.25s ease-in-out;
   -o-transition: all 0.25s ease-in-out;
-  -webkit-transform: rotateY(-90deg) scale(0.8);
-  -moz-transform: rotateY(-90deg) scale(0.8);
-  -ms-transform: rotateY(-90deg) scale(0.8);
-  -o-transform: rotateY(-90deg) scale(0.8);
-  transform: rotateY(-90deg) scale(0.8);
+  -webkit-transform: rotateY(-10deg) scale(0.8);
+  -moz-transform: rotateY(-10deg) scale(0.8);
+  -ms-transform: rotateY(-10deg) scale(0.8);
+  -o-transform: rotateY(-10deg) scale(0.8);
+  transform: rotateY(-10deg) scale(0.8);
 }
 
 .project-post:hover .hover-box {
@@ -620,7 +621,7 @@ img {
 }
 
 .templatemo_footer {
-  padding: 40px 0;
+  padding: 0 0 40px 0;
   background-color: white;
 }
 
